feat: added social media icons and changed border-radius of btn

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -125,3 +125,7 @@ $grey: #313131;
   border-right: 0;
   border-top: 0;
 }
+
+.btn-header {
+  background-image: linear-gradient(90deg, #9f55ff, #7000ff);
+}
