feat: changed texts and improved responsivness

--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -13,7 +13,7 @@
         position: absolute;
         width: calc(100% + 8px);
         height: 110%;
-        background-color: #120e16;
+        background-color: #000;
         right: -8px;
         animation: cursor .8s infinite, typing 24s steps(14) infinite;
     }
